--- a/public/Home.html
+++ b/public/Home.html
@@ -43,7 +43,7 @@
       <div>
         <h1>Hello, <span></span></h1>
         <h1>welcome to <span></span></h1>
-        <h1>scounting <span></span></h1>
+        <h1>scouting <span></span></h1>
         <a href="#projects" type="button" class="cta">Activities</a>
       </div>
     </div>
