--- a/public/Home.html
+++ b/public/Home.html
@@ -56,7 +56,7 @@
     <div class="services container">
       <div class="service-top">
         <h1 class="section-title">Sections</h1>
-        <p> SCOUTS MEMBERS (boys  & girls) are grouped into different units that relate to their age groups and scouting
+        <p> SCOUTS MEMBERS  are grouped into different units that relate to their age groups and scouting
           experiences.</p>
       </div>
       <div class="service-bottom">
